--- a/JSFun/generation.html
+++ b/JSFun/generation.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <input type="text" name="num" id="num1">
-    <input type="button" value="Click" id="btn1" onclick="me">
+    <input type="button" value="Click" id="btn1" >
 </body>
 </html>
